--- a/gestao_patrimonio/templates/departamentos/departamento_list.html
+++ b/gestao_patrimonio/templates/departamentos/departamento_list.html
@@ -80,4 +80,9 @@
         background-color: #f1f1f1;
     }
 </style>
+<div class="text-center mt-4">
+    <a href="{% url 'dashboard' %}" class="btn btn-secondary">
+        <i class="fas fa-arrow-left"></i> Voltar
+    </a>
+</div>
 {% endblock %}
